Fix spacing around nav

--- a/assets/css/layout/cluster.css
+++ b/assets/css/layout/cluster.css
@@ -1,12 +1,22 @@
 .cluster {
   display: flex;
   flex-flow: row wrap;
-  margin-right: -2rem;
-  margin-bottom: -2rem;
+  margin-right: -1rem;
+  margin-bottom: -1rem;
 
   & > * {
-    margin-right: 2rem;
-    margin-bottom: 2rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  @media (--desktop) {
+    margin-right: -2rem;
+    margin-bottom: -2rem;
+
+    & > * {
+      margin-right: 2rem;
+      margin-bottom: 2rem;
+    }
   }
 
   &--lg {
